--- a/unix/zbx.suspend.yml
+++ b/unix/zbx.suspend.yml
@@ -4,7 +4,7 @@
   tasks:
     - name: Maintenance Zabbix monitoring for Unix Patching
       community.zabbix.zabbix_maintenance:
-        server_url: "https://zabbix.wefsociety.com/zabbix"
+        server_url: "https://zabbix.wefsociety.com/"
         login_user: "ansible"
         login_password: "********************"
         name: "Maintenance for Unix Patching"
